styles.scss
/* ... */
.gallery-image__alt,
.gallery-image__toggle {
  display: none;
}
// For specificity
.gallery-image-link > .gallery-image-link__toggle {
  display: none;
  background-color: var(--clr-accent);
}
.gallery-list:focus-within .gallery-image {
  background-color: black;
}
.gallery-list:focus-within {
  & .gallery-image-wrapper {
    z-index: var(--layer-zoomy);
    display: flex;
    // pointer-events: none;
    position: fixed;
    width: fit-content;
    height: fit-content;
    margin: auto;
    outline: 2px solid var(--clr-border);
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    cursor: default;
  }
  & .gallery-image-topbar {
    display: block;
    position: sticky;
    top: 0;
  }
  // System to do alt imagery
  &:has( .gallery-image__alt) img:first-of-type {
    display: none;
  }
  & .gallery-image__alt {
    display: block;
  }
}
.gallery-toggle-button {
  cursor: pointer;
}
.gallery-toggle:focus-visible ~ .gallery-image-topbar > .gallery-image-link > .gallery-toggle-button {
  box-shadow: 0 0 0 4px inset var(--clr-text);
}
.gallery-toggle:checked ~ .gallery-image-topbar > .gallery-image-link {
  & > .gallery-toggle-button {
    background-color: var(--clr-warning);
    color: var(--clr-text);
  }
  & > .gallery-image-link__toggle {
    display: inline-block;
    & ~ * {
      display: none; // Hide the next DL button
    }
  }
}
.gallery-toggle:checked ~ .gallery-image {
  & > .gallery-image__toggle {
    display: block;
  }
  & > :not(.gallery-image__toggle) {
    display: none;
  }
}
.gallery-image-wrapper:has(>.gallery-toggle) > .gallery-image:focus-visible {
  box-shadow: 0 0 0 4px inset var(--clr-border);
}

// @misc @ Media
@media (min-width: 769px) {
  .gallery-image-wrapper {
    flex-direction: column;
    overflow-y: scroll;
    -ms-overflow-style: none;
    scrollbar-width: none;
  }
  .gallery-image-topbar {
    border-bottom: 2px solid var(--clr-border);
  }
  .gallery-list:focus-within .gallery-image {
    // min-height: 86vh; // Respect zoom out level // How about let the user zoom the page or download the image? This declaration alone give so many headache!
    height: min(896px, 95vh);
    & > img {
      object-fit: contain; // For landscape to not overflow
    }
  }
  .gallery-close {
    float: right;
    cursor: pointer;
    padding: 0 1.5rem;
    outline: 2px solid var(--clr-border);
    color: var(--clr-text);
    transition: background-color .1s;
    &::before {
      content: "X";
      line-height: var(--image-topbar-height);
      display: block;
    }
    &:hover {
      background-color: var(--clr-warning);
    }
    &:active {
      background-color: var(--clr-codeblock-bg);
      transition: unset;
    }
  }
  .gallery-list--custom-1 {
    height: fit-content;
  }
}
@media (max-width: 768px) {
  .gallery-list {
    --image-topbar-height: 64px;
  }
  .gallery-tab-buttons {
    --height: 3.25rem;
  }
  .gallery-list {
    width: 144px;
  }
  .gallery-list > p {
    position: fixed;
    text-align: center;
    bottom: var(--navigation-height-mobile);
    opacity: 0;
    left: 0;
    right: 0;
    transform: none;
    transition: none;
  }
  .gallery-lists--horizontal {
    flex-direction: row;
    flex-wrap: nowrap;
    overflow: hidden;
    overflow-x: scroll;
    & > .gallery-list {
      width: initial;
      height: 256px;
      overflow: visible;
      & img {
        width: auto;
      }
    }
  }
  .gallery-image-wrapper {
    flex-direction: column-reverse;
  }
  .gallery-image-topbar {
    position: relative!important;
    border-top: 2px solid var(--clr-border);
    &::before {
      padding-left: unset;
      padding-right: 16px;
      float: right;
      content: "Close < ";
    }
  }
  .gallery-close {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    &::before {
      all: unset;
    }
  }
  .gallery-image-link {
    float: unset;
    position: absolute;
    flex-direction: row-reverse;
    bottom: 0;
    left: 0;
    & > a {
      background-color: var(--clr-secondary-old);
    }
  }
  .gallery-list:hover > p {
    transition: none;
    animation: none;
    opacity: 0;
  }
  .gallery-list:focus-within {
    & > p {
      z-index: calc(var(--layer-zoomy) + 1);
      bottom: calc(var(--image-topbar-height) + 2px); // 2 is the outline/border
      animation: key-opacity 1s 2s reverse both;
    } 
    & > .gallery-image-wrapper {
      height: 100%;
      width: 100%;
    }
    & .gallery-image {
      flex: 1;
      height: 0;
    }
    & img {
      object-fit: contain;
      width: 100%;
      height: 100%;
    }
  }
  .gallery-list--custom-1 .gallery-image > img {
    object-position: 85%;
  }
}
@media (max-width: 450px) {
  .gallery-list.head .gallery-image {
    margin-top: auto;
  }
  .gallery-list.wide .gallery-image {
    width: auto;
    height: 100%;
  }
  .gallery-list.full .gallery-image {
    width: auto;
    height: 100%;
  }
}
@media (max-height: 800px) {
  .gallery-tab-content {
    --speed-open-delay: calc(var(--speed-close) + .5s);
    --speed-close: 1s;
  }
}

// ! @title ________ Blog ________

// ? @section # MD to HTML Defaults
// Pre is generated when using triple tilde
.highlighter-rouge:has(pre),
.codeblock-full {
  --title: "txt.md";
  outline: none;
  border: 2px solid var(--clr-codeblock-border);
  padding-top: 1rem;
  &::before {
    content: var(--title);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    line-height: 1rem;
    background-color: var(--clr-codeblock-bg-title);
    color: var(--clr-codeblock-text-title);
  }
  & pre {
    padding: 0 1rem;
    margin: 0;
    overflow: auto;
  }
  & code {
    font-family: 'Fira Code', monospace, system-ui;
    font-size: small;
  }
}
.codeblock-full {
  position: relative;
  outline: 1px solid var(--clr-codeblock-border);
  margin: 1rem 0;
  box-sizing: border-box;
  background-color: var(--clr-codeblock-bg);
  & pre {
    padding-bottom: 1rem;
  }
}
/* ... */

